Spacing fixes

--- a/src/Plugins/Core/bookmarks.scss
+++ b/src/Plugins/Core/bookmarks.scss
@@ -1,4 +1,4 @@
 .workspace-leaf-content[data-type=bookmarks] .view-content {
 	padding-inline: var(--size-4-1);
-	padding-top: unset;
+	// padding-top: unset;
 }
