--- a/src/Plugins/Core/fileExplorer.scss
+++ b/src/Plugins/Core/fileExplorer.scss
@@ -14,7 +14,7 @@
 
 .nav-files-container {
 	padding-inline: var(--size-4-1);
-	padding-top: unset;
+	// padding-top: unset;
 }
 
 .tree-item-self {
