--- a/src/Plugins/Core/outline.scss
+++ b/src/Plugins/Core/outline.scss
@@ -8,5 +8,5 @@
 
 .workspace-leaf-content[data-type="outline"] .view-content {
 	padding-inline: var(--size-4-1);
-	padding-top: 0;
+	// padding-top: 0;
 }
