--- a/src/Plugins/Core/properties.scss
+++ b/src/Plugins/Core/properties.scss
@@ -1,5 +1,5 @@
 .workspace-leaf-content[data-type=all-properties] .view-content,
 .workspace-leaf-content[data-type=properties] .view-content {
 	padding-inline: var(--size-4-1);
-	padding-top: unset;
+	// padding-top: unset;
 }
