--- a/src/Plugins/Core/search.scss
+++ b/src/Plugins/Core/search.scss
@@ -11,7 +11,7 @@
 }
 
 .search-row {
-	padding: 0 var(--size-4-2) var(--size-4-2);
+	padding: var(--size-4-2) var(--size-4-2) var(--size-4-2);
 	margin: unset;
 	background-color: var(--background-secondary);
 	border-bottom: var(--window-border);
