--- a/src/Plugins/Theme/vaultIcon.scss
+++ b/src/Plugins/Theme/vaultIcon.scss
@@ -23,7 +23,3 @@ body.is-mobile .mod-left .workspace-drawer-header::before {
 	background-size: contain;
 	border-radius: unset;
 }
-
-body:not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile {
-	padding: var(--size-4-1) var(--size-4-2);
-}
