--- a/src/User Interface/Sidebar/tabHeader.scss
+++ b/src/User Interface/Sidebar/tabHeader.scss
@@ -3,8 +3,12 @@
 }
 
 .workspace-tab-header-container {
-	padding: var(--size-4-1) var(--size-4-2);
+	padding: var(--size-4-1);
 	border-bottom: unset;
+}
+
+.is-hidden-frameless:not(.is-fullscreen) .workspace-tabs.mod-top-left-space .workspace-tab-header-container {
+	padding-left: calc(var(--size-4-1) + var(--frame-left-space));
 }
 
 .workspace-tab-header-new-tab {
@@ -38,7 +42,7 @@
 
 .workspace-tab-header-inner {
 	gap: 1px;
-	padding: var(--size-4-1);
+	padding: var(--size-4-1) var(--size-2-3);
 }
 
 .mod-root .workspace-tab-header-inner {
