--- a/src/User Interface/Sidebar/vaultProfile.scss
+++ b/src/User Interface/Sidebar/vaultProfile.scss
@@ -1,5 +1,5 @@
 body:not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile {
-	padding: var(--size-4-1) var(--size-4-2);
+	padding: var(--size-4-1);
 
 	.workspace-drawer-vault-switcher {
 		padding: var(--size-4-1);
